--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,9 +34,18 @@ $main-border-radius: 8px;
   &.smallest {
     width: 48px;
     height: 48px;
+    max-width: 48px;
+    max-height: 48px;
+    min-width: 48px;
+    min-height: 48px;
+
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
 
-  border-radius: $main-border-radius;
+  border-radius: $main-border-radius !important;
 }
 
 .gray-button {
@@ -49,18 +58,26 @@ $main-border-radius: 8px;
 .gray-button:hover {
   background-color: $button-hover-color;
 }
+
 .gray-button:disabled {
   background-color: $button-disabled-color;
 }
 
 .red-button {
   @include default-button;
+  background-color: $cart-color !important;
 
-  background-color: $cart-color;
 }
 
 .red-button:hover {
-  filter: drop-shadow(0px, 8px, 24px, rgba(234, 124, 105, 0.4))
+  filter: drop-shadow(rgba(234, 124, 105, 0.4) 0px 8px 24px);
 }
 
+.MuiDivider-root {
+  border-color: rgba(255, 255, 255, 0.08) !important;
+}
+
+
 @import "./layouts/main-layout.scss";
+@import "./layouts/cards-page.scss";
+@import "./inputUI/input.scss";
