--- a/src/styles/componentUI/cart.scss
+++ b/src/styles/componentUI/cart.scss
@@ -31,10 +31,25 @@
     }
   }
 
+  .card-amount {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .card-list {
     height: 100%;
     max-height: 100%;
     overflow-y: auto;
+
+    .row-title {
+      padding: 12px 0px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    }
+
+    .poke-cart-detail {
+      padding: 12px 0px;
+    }
   }
 
   .card-summary {
