Add items to dropdowns

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -159,3 +159,4 @@ h1 {
 @import "./inputUI/input.scss";
 @import "./componentUI/poke-card.scss";
 @import "./componentUI/cart.scss";
+@import "./componentUI/dropdown.scss";
