--- a/src/styles/layouts/cards-page.scss
+++ b/src/styles/layouts/cards-page.scss
@@ -27,6 +27,14 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+    .dropdowns {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+    }
   }
 
   .cards-panel {
