--- a/src/styles/componentUI/dropdown.scss
+++ b/src/styles/componentUI/dropdown.scss
@@ -5,6 +5,26 @@
     color: $white-color;
     border: 1px solid #393c49;
   }
+
+  button {
+    p {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      font-size: 12px;
+      margin: 0px;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .dropdown {
+    width: 100%;
+    button{
+      width: 100%;
+    }
+  }
 }
 
 ul.MuiList-root {
@@ -17,7 +37,8 @@ ul.MuiList-root,
   background-color: $card-content-color !important;
   color: $white-color;
 
-  li:hover {
+  li:hover,
+  li.active {
     background-color: $button-hover-color !important;
   }
 
