--- a/src/styles/layouts/cards-page.scss
+++ b/src/styles/layouts/cards-page.scss
@@ -32,6 +32,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      flex-wrap: wrap;
       justify-content: space-between;
       gap: 1rem;
     }
