--- a/src/styles/layouts/cards-page.scss
+++ b/src/styles/layouts/cards-page.scss
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    column-gap: 1rem;
+    gap: 1rem;
 
     .poke-card {
       min-width: 175px;
